# django_q_spectacular

./: Makefile  lab.ipynb  mkdocs.yaml  pyproject.toml
config/: settings.py  urls.py
docs/: guide.md  index.md
docs/api/: models.md  serializers.md  views.md
templates/docs/: 404.html  index.html  objects.inv
templates/docs/api/models/: index.html
templates/docs/api/serializers/: index.html
templates/docs/api/views/: index.html
templates/docs/guide/: index.html
templates/docs/search/: search_index.json
todo/: models.py  serializers.py  tasks.py  urls.py  views.py
todo/migrations/: 0001_initial.py
